--- a/src/compact-smaller.css
+++ b/src/compact-smaller.css
@@ -189,15 +189,9 @@
   font-size: 1.18rem !important;
   margin-bottom: 0.22rem !important;
 }
-.user-tab-container .compact-smaller-left {
-  max-width: 420px !important;
-  min-width: 0 !important;
-  width: 100% !important;
-  padding: 0.3rem !important;
-  box-sizing: border-box !important;
-}
+.user-tab-container .compact-smaller-left,
 .user-tab-container .compact-smaller-right {
-  max-width: 700px !important;
+  max-width: 600px !important;
   min-width: 0 !important;
   width: 100% !important;
   padding: 0.3rem !important;
